--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -356,7 +356,17 @@ button.cancel,
 /* -------------------------- BUTTONS -------------------------- */
 form label,
 .form label {
-  color: #999;
+  color: #aaa;
+  font-weight: 300;
+}
+form fieldset,
+.form fieldset {
+  background: #fff;
+  border-bottom: solid 1px #eee;
+}
+form fieldset .icon,
+.form fieldset .icon {
+  color: #ccc;
 }
 form input[type="text"],
 .form input[type="text"],
@@ -518,7 +528,7 @@ form input[type=range],
 }
 form input[type=range]:not(.checkbox),
 .form input[type=range]:not(.checkbox) {
-  background-color: #c7c7c7;
+  background-color: #ddd;
 }
 form input[type=range]:not(.checkbox):active,
 .form input[type=range]:not(.checkbox):active {
@@ -538,33 +548,20 @@ form input[type=range]::-webkit-slider-thumb,
   -webkit-border-radius: FORM-border-radius;
   -moz-border-radius: FORM-border-radius;
   border-radius: FORM-border-radius;
-  background: #fff;
+  background: #eee;
+  -webkit-box-shadow: inset 0 0 1px #bbb;
+  -moz-box-shadow: inset 0 0 1px #bbb;
+  box-shadow: inset 0 0 1px #bbb;
 }
 form input[type=range]::-webkit-slider-thumb::after,
 .form input[type=range]::-webkit-slider-thumb::after {
-  background: #ddd;
-}
-form .progress .labels,
-.form .progress .labels {
-  font-size: 12px;
-  line-height: 18px;
-  color: #858585;
+  background: #fff;
 }
 form .progress .bar,
 .form .progress .bar {
-  background: #c7c7c7;
+  background-color: #ddd;
 }
 form .progress .bar .value,
 .form .progress .bar .value {
-  background-color: THEME-light;
-}
-form .progress .bar .value .label,
-.form .progress .bar .value .label {
-  float: right;
-  margin-right: 3px;
-  color: rgba(0,0,0,0.6);
-  -webkit-text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
-  -moz-text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
-  text-shadow: 0 1px 0 rgba(255,255,255,0.2) !important;
-  font-size: 12px;
+  background-color: #03b1ff;
 }
