--- a/src/stylesheets/lungo.widgets.notification.styl
+++ b/src/stylesheets/lungo.widgets.notification.styl
@@ -12,9 +12,11 @@
 
 OPACITY = rgba(0,0,0,0.75)
 LOADING = 104px
+WINDOW_WIDTH = 280px
 
 .notification
   position: absolute
+  top: 0
   width: 100%
   height: 100%
   z-index: 3
@@ -51,10 +53,11 @@ LOADING = 104px
         display: none
 
     &:not(.growl)
-      width: 280px
+      width: WINDOW_WIDTH
       left: 0
       top: 0
       margin: (HEADER_FOOTER_HEIGHT / 2) auto 0
+
       transform(translateY(100%))
       &.show
         transform(translateY(0%))
