--- a/src/stylesheets/import/constants.styl
+++ b/src/stylesheets/import/constants.styl
@@ -7,6 +7,8 @@ ARTICLE_WITH_HEADER_EXTENDED = (HEADER_FOOTER_HEIGHT + HEADER_GROUPBAR_HEIGHT)
 
 ASIDE_WIDTH         = 264px
 ASIDE_WIDTH_SMALL   = 64px
+ASIDE_SMALL_ICON    = 48px
+
 
 BORDER_RADIUS       = 2px
 
