--- a/example/stylesheets/app.css
+++ b/example/stylesheets/app.css
@@ -6,11 +6,10 @@
     display: block;
 }
 
-#touchevents-console {
+.console {
     background: #292f34;
     color: white;
-    font-size: 3.0em;
-    line-height: 2.2em;
+    font-size: 1.0em;
     text-align: center;
 }
 
