Fix flexbox for Firefox OS

--- a/src/stylesheets/Lungo.layout.nav.styl
+++ b/src/stylesheets/Lungo.layout.nav.styl
@@ -14,6 +14,7 @@ nav
   &.groupbar, footer &
     display-box()
     box-pack(justify)
+    width: 100%
     & > a
       box-flex(1)
 
@@ -64,7 +65,7 @@ nav
 
 
   &.groupbar
-    position: absolute
+    position: relative
     top: HEADER_FOOTER_HEIGHT
     height: HEADER_GROUPBAR_HEIGHT
     width: 100%
