--- a/src/stylesheets/theme.red.styl
+++ b/src/stylesheets/theme.red.styl
@@ -8,8 +8,7 @@
  */
 
 @import "import/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700")
-
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700")
 WHITE = white
 
 /* -------------------------- THEME -------------------------- */
@@ -27,7 +26,7 @@ LIST_color_2nd  = lighten(LIST_color, 35%)
 LIST_border     = lighten(LIST_color, 90%)
 NAV_LINK        = #888
 NAV_LINK_ACTIVE = WHITE
-THEME           = #0093D5
+THEME           = COLOR_cancel
 THEME_light     = lighten(THEME, 15%)
 THEME_dark      = darken(THEME, 15%)
 //?
@@ -36,7 +35,7 @@ COLOR = #484a49
 
 body
   background-color: DARK
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
   font-size: 13px
   line-height: 1.3em
