--- a/example/components/lungo/theme.lungo.css
+++ b/example/components/lungo/theme.lungo.css
@@ -10,7 +10,7 @@
 /* -------------------------- THEME -------------------------- */
 body {
   background-color: #222;
-  font-family: "Helvetica Neue", "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 13px;
   line-height: 1.3em;
