Fix error in .tag + .icon

--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -176,7 +176,7 @@ nav
 
 
 /* -------------------------- TAG -------------------------- */
-.tag
+.tag:not(.icon)
   color: #fff
   border-radius 2px
   font-weight: 700 !important
@@ -229,7 +229,7 @@ a.button, button
   &[disabled]
     background-color: black
 
-button, .button, .tag
+button, .button, .tag:not(.icon)
   &
     background-color: THEME_dark
   &.secondary
