--- a/packages/lungo/theme.lungo.css
+++ b/packages/lungo/theme.lungo.css
@@ -250,20 +250,20 @@ aside .list li .icon {
   color: #666;
 }
 /* -------------------------- TAG -------------------------- */
-.tag {
+.tag:not(.icon) {
   color: #fff;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
   font-weight: 700 !important;
 }
-.tag.count {
+.tag:not(.icon).count {
   background-color: #0093d5;
 }
-.tag header .count {
+.tag:not(.icon) header .count {
   background-color: THEME-dark !important;
 }
-footer .tag {
+footer .tag:not(.icon) {
   -webkit-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   -moz-box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
   box-shadow: inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5);
@@ -335,22 +335,22 @@ button[disabled] {
 }
 button,
 .button,
-.tag {
+.tag:not(.icon) {
   background-color: #007db5;
 }
 button.secondary,
 .button.secondary,
-.tag.secondary {
+.tag:not(.icon).secondary {
   background-color: #bfbfbf;
 }
 button.accept,
 .button.accept,
-.tag.accept {
+.tag:not(.icon).accept {
   background-color: #3fb58e;
 }
 button.cancel,
 .button.cancel,
-.tag.cancel {
+.tag:not(.icon).cancel {
   background-color: #ee6557;
 }
 /* -------------------------- BUTTONS -------------------------- */
